# ORB_SLAM2

./: XTION.yaml  run_camera_left.sh
Examples/ROS/ORB_SLAM2/: CMakeLists.txt  run_camera_front.sh  run_camera_right.sh  set_transform.sh
Examples/ROS/ORB_SLAM2/src/: new_world_so3_no_joint.cpp  new_world_so3_node.cpp  ros_rgbd.cc  ros_xtion.cc  ros_xtion.cpp
include/: LocalMapping.h  System.h  Tracking.h
src/: LocalMapping.cc  System.cc  Tracking.cc
